2013-10-23 Pedro Vicente  <pvicente@uci.edu>

	* Add an option to configure --enable-openmp (default yes), disable with --disable-openmp.

2013-10-23  Charlie Zender  <zender@uci.edu>

	* Update autobld/missing with missing from automake 1.13

	* Add GNU-required AUTHORS file to quiet autoreconf warnings

2013-10-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.8 release procedure:
 	Changes since nco-4_3_7: hash?
	cd ~/nco;cvs tag -d nco-4_3_8;cvs tag -d nco-4_3_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.8 release"
	cvs tag -c nco-4_3_8;cvs tag -c nco-4_3_8-1

	* Rename most external symbols to have nco_ prefix
	This changes prg,prg_nm,dbg_lvl to nco_prg_id,nco_prg_nm,nco_dbg_lvl
	and prg_get(),prg_nm_get(),dbg_lvl_get() to nco_prg_id_get(),nco_prg_nm_get(),nco_dbg_lvl_get()
	This should considerably reduce chances of namespace pollution
	Other changes include prg_prs()->nco_prg_prs()
	Remaining namespace violators will be changed in the course of time
	This partially addresses external symbol conflicts with NCO 4.3.7 on yellowstone.ucar.ed

2013-10-20  Charlie Zender  <zender@uci.edu>

	* Add hashing to trv_tbl_mrk_xtr(). More regressions.

	* Document hash table behavior. Play with -Wcast-qual

	* Tidy group routines. Verify no regressions before implementing hashes.

2013-10-18  Charlie Zender  <zender@uci.edu>

	* Supplant strcmp() with hash table in trv_tbl_var_nm_fll()
	Works on all operators except ncbo

	* #define NCO_HSH_TRV_OBJ token to use hashes instead of strcmp() loops

	* Hash all objects in traversal table and store resultant hash table
	Use string-keyed hash based on full object name

	* Add uthash hash table functionality stubs and nco_uthash.h
	BSD-licensed code by Troy D. Hanson http://troydhanson.github.com/uthash

	* Warn about excessive malloc()-size requests.
	Namespace pollution caused request for 18446744073709551608 B = 16 EB

	* Move ncga enum to nces enum and place at end to workaround namespace pollution